@@ -1,3 +1,7 @@
+2009-11-03  Hans Boehm <Hans.Boehm@hp.com>
+
+	* alloc.c: Revert last change.
+
 2009-11-02  Ivan Maidanski <ivmai@mail.ru>
 
 	* include/private/gcconfig.h (STACKBOTTOM): Add a presence check
